# gen/http/openapi3.yaml
@@ -55,6 +55,7 @@ paths:
                             description: Main technical oversight committee for the project
                             display_name: TSC Committee Calendar
                             enable_voting: true
+                            has_mailing_list: true
                             join_mode: open
                             last_reviewed_at: "2025-08-04T09:00:00Z"
                             last_reviewed_by: user_id_12345
@@ -94,6 +95,7 @@ paths:
                                 description: Main technical oversight committee for the project
                                 display_name: TSC Committee Calendar
                                 enable_voting: true
+                                has_mailing_list: true
                                 join_mode: open
                                 last_reviewed_at: "2025-08-04T09:00:00Z"
                                 last_reviewed_by: user_id_12345
@@ -302,6 +304,7 @@ paths:
                                 description: Main technical oversight committee for the project
                                 display_name: TSC Committee Calendar
                                 enable_voting: true
+                                has_mailing_list: true
                                 join_mode: open
                                 mailing_list: tsc@lists.example.org
                                 name: Technical Steering Committee
@@ -403,6 +406,7 @@ paths:
                             description: Main technical oversight committee for the project
                             display_name: TSC Committee Calendar
                             enable_voting: true
+                            has_mailing_list: true
                             join_mode: open
                             mailing_list: tsc@lists.example.org
                             name: Technical Steering Committee
@@ -427,6 +431,7 @@ paths:
                                 description: Main technical oversight committee for the project
                                 display_name: TSC Committee Calendar
                                 enable_voting: true
+                                has_mailing_list: true
                                 join_mode: open
                                 mailing_list: tsc@lists.example.org
                                 name: Technical Steering Committee
@@ -3694,6 +3699,11 @@ components:
                     description: Whether voting is enabled for this committee
                     default: false
                     example: true
+                has_mailing_list:
+                    type: boolean
+                    description: Whether the committee has any associated mailing lists
+                    default: false
+                    example: true
                 join_mode:
                     type: string
                     description: How new members can join this committee
@@ -3754,6 +3764,7 @@ components:
                 description: Main technical oversight committee for the project
                 display_name: TSC Committee Calendar
                 enable_voting: true
+                has_mailing_list: true
                 join_mode: open
                 mailing_list: tsc@lists.example.org
                 name: Technical Steering Committee
@@ -3820,6 +3831,11 @@ components:
                 enable_voting:
                     type: boolean
                     description: Whether voting is enabled for this committee
+                    default: false
+                    example: true
+                has_mailing_list:
+                    type: boolean
+                    description: Whether the committee has any associated mailing lists
                     default: false
                     example: true
                 join_mode:
@@ -3908,6 +3924,7 @@ components:
                 description: Main technical oversight committee for the project
                 display_name: TSC Committee Calendar
                 enable_voting: true
+                has_mailing_list: true
                 join_mode: open
                 mailing_list: tsc@lists.example.org
                 name: Technical Steering Committee
@@ -4060,6 +4077,11 @@ components:
                     description: Whether voting is enabled for this committee
                     default: false
                     example: true
+                has_mailing_list:
+                    type: boolean
+                    description: Whether the committee has any associated mailing lists
+                    default: false
+                    example: true
                 join_mode:
                     type: string
                     description: How new members can join this committee
@@ -4158,6 +4180,7 @@ components:
                 description: Main technical oversight committee for the project
                 display_name: TSC Committee Calendar
                 enable_voting: true
+                has_mailing_list: true
                 join_mode: open
                 last_reviewed_at: "2025-08-04T09:00:00Z"
                 last_reviewed_by: user_id_12345
@@ -4248,6 +4271,11 @@ components:
                 enable_voting:
                     type: boolean
                     description: Whether voting is enabled for this committee
+                    default: false
+                    example: true
+                has_mailing_list:
+                    type: boolean
+                    description: Whether the committee has any associated mailing lists
                     default: false
                     example: true
                 join_mode:
@@ -4369,6 +4397,7 @@ components:
                 description: Main technical oversight committee for the project
                 display_name: TSC Committee Calendar
                 enable_voting: true
+                has_mailing_list: true
                 join_mode: open
                 last_reviewed_at: "2025-08-04T09:00:00Z"
                 last_reviewed_by: user_id_12345
@@ -5534,6 +5563,11 @@ components:
                     description: Whether voting is enabled for this committee
                     default: false
                     example: true
+                has_mailing_list:
+                    type: boolean
+                    description: Whether the committee has any associated mailing lists
+                    default: false
+                    example: true
                 join_mode:
                     type: string
                     description: How new members can join this committee
@@ -5631,6 +5665,7 @@ components:
                 description: Main technical oversight committee for the project
                 display_name: TSC Committee Calendar
                 enable_voting: true
+                has_mailing_list: true
                 join_mode: open
                 last_reviewed_at: "2025-08-04T09:00:00Z"
                 last_reviewed_by: user_id_12345
@@ -5784,6 +5819,11 @@ components:
                     description: Whether voting is enabled for this committee
                     default: false
                     example: true
+                has_mailing_list:
+                    type: boolean
+                    description: Whether the committee has any associated mailing lists
+                    default: false
+                    example: true
                 join_mode:
                     type: string
                     description: How new members can join this committee
@@ -5843,6 +5883,7 @@ components:
                 description: Main technical oversight committee for the project
                 display_name: TSC Committee Calendar
                 enable_voting: true
+                has_mailing_list: true
                 join_mode: open
                 mailing_list: tsc@lists.example.org
                 name: Technical Steering Committee
